--- a/views/hour-readings/hour-readings-daily.ejs
+++ b/views/hour-readings/hour-readings-daily.ejs
@@ -25,10 +25,12 @@
     <script src='../../../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.js'></script>
     <script src="../../../../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.js"></script>
     <link rel="stylesheet" href="../../../../../AdminLTE-master/css/custom-calendar.css">
+    <link rel="stylesheet" href="../../../../css/hour-readings-daily.css">
     <title>Document</title>
 </head>
 
 <body>
+    <h1 class="text-center">Мерения по часове за id:</h1>
     <div class="row">
         <div id="calendar" class="col-md-10">
         </div>
