--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -229,7 +229,7 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="/users/listReadings" class="nav-link">
+                                <a href="/users/invoicing" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>СТП</p>
                                 </a>
