--- a/views/hour-readings/listHourReadingsTable.ejs
+++ b/views/hour-readings/listHourReadingsTable.ejs
@@ -28,7 +28,7 @@
     <h1 class="text-center mb-5">Мерения - по часови</h1>
 
     <form action="" method="GET">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-4"> Дата <input id="date" name="date" class="ml-2" type="date" type="search"></input>
             </div>
             <div class="col-md-4">Име на клиент <input id="nameOfClient" list="names" name="name" class="ml-2"
@@ -37,13 +37,21 @@
                 </datalist>
             </div>
         </div>
-        <div class="row mt-3 justify-content-center">
-            <div class="col-md-6"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
+        <div class="row my-3 justify-content-center">
+            <div class="col-md-5"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
                     type="search"></input>
                 <datalist id="idList">
                 </datalist>
             </div>
-            <div class="col-md-4"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
+            <div class="col-md-3">
+                ЕРП
+                <select name="erp" id="erp">
+                    <option value="CEZ">ЧЕЗ</option>
+                    <option value="EnergoPRO">ЕнергоПРО</option>
+                    <option value="EVN">ИВН</option>
+                </select>
+            </div>
+            <div class="col-md-3"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
         </div>
     </form>
     <div class="container clients text-center mb-5">
@@ -54,7 +62,8 @@
                     <th>Идентификационен код на клиент</th>
                     <th>Име на клиент</th>
                     <th>Дата на мерене</th>
-                    <th>Детайли на мерене</th>
+                    <th>ЕРП</th>
+                    <th>Общ товар</th>
                 </tr>
             </thead>
             <tbody id="tBody">
