--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,7 +92,6 @@
                         <a href="#" class="d-block"><%=name%></a>
                     </div>
                 </div>
-
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
@@ -118,6 +117,13 @@
                                     <a href="/users/import/STP/HourPredictions" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>СТП прогнози</p>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a href="/users/import/stp-hour-readings" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>СТП по часови</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
