--- a/views/STP listings/listReadings.ejs
+++ b/views/STP listings/listReadings.ejs
@@ -15,32 +15,32 @@
 
 <body>
     <div class="container">
-        <h1 class="mt-5 mb-5 text-center">Импортирани Мерения</h1>
+        <h1 class="my-5 text-center">Импортирани Мерения</h1>
         <form action="" method="GET">
-            <div class="row">
-                <div class="col-md-4"> От дата <input id="fromDate" name="fromDate" class="ml-2" type="date"
+            <div class="row justify-content-around">
+                <div class=""> От дата <input id="fromDate" name="fromDate" class="ml-2" type="date"
                         type="search"></input>
                 </div>
-                <div class="col-md-4"> До дата <input id="toDate" name="toDate" class="ml-2" type="date"
-                        type="search"></input></div>
-                <div class="col-md-4"> ЕРП <select id="ERP" name="ERP">
+                <div class=""> До дата <input id="toDate" name="toDate" class="ml-2" type="date" type="search"></input>
+                </div>
+                <div class=""> ЕРП <select id="ERP" name="ERP">
                         <option value="CEZ">CEZ</option>
                         <option value="EnergoPRO">EnergoPRO</option>
                         <option value="EVN">EVN</option>
                     </select></div>
             </div>
-            <div class="row mt-3">
-                <div class="col-md-4">Име на клиент <input id="nameOfClient" list="names" name="clientNames"
-                        class="ml-2" type="search"></input>
+            <div class="row justify-content-around my-3">
+                <div class="">Име на клиент <input id="nameOfClient" list="names" name="clientNames" class="ml-2"
+                        type="search"></input>
                     <datalist id="names">
                     </datalist>
                 </div>
-                <div class="col-md-4"> Идентификационен код <input id="clientID" name="clientID" class="ml-2"
-                        list="idList" type="search"></input>
+                <div class=""> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
+                        type="search"></input>
                     <datalist id="idList">
                     </datalist>
                 </div>
-                <div class="col-md-4"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
+                <div class=""><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
             </div>
         </form>
     </div>
