--- a/views/clients/clients.ejs
+++ b/views/clients/clients.ejs
@@ -20,16 +20,17 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
+    <link rel="stylesheet" href="../../css/checkboxes.css">
     <script src="../../../js/datatables/datatables.js"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <h1 class="text-center mb-5">Клиенти</h1>
+    <h1 class="text-center mb-4">Клиенти</h1>
     <div class="container clients text-center mb-5">
         <div class="row justify-content-center">
 
-            <span class="mr-2">Вид ЕРП:</span>
+            <span class="mr-2 mt-3 text-heading">Вид ЕРП:</span>
             <label class="checkbox">
                 <input type="checkbox" name="erp_type" value="evn" checked>
                 <span>ИВН</span>
@@ -42,8 +43,7 @@
                 <input type="checkbox" name="erp_type" value="energoPRO" checked>
                 <span>ЕнергоПРО</span>
             </label>
-
-            <span class="mr-2 ml-5">Вид мерене:</span>
+            <span class="mr-2 ml-5 mt-3 text-heading">Вид мерене:</span>
             <label class="checkbox">
                 <input type="checkbox" name="metering_type" value="stp" checked>
                 <span>По СТП</span>
@@ -60,7 +60,7 @@
                     <th>Идентификационен код</th>
                     <th>Име на клиент</th>
                     <th>Вид ЕРП</th>
-                    <th>Вид мерене</th> 
+                    <th>Вид мерене</th>
                 </tr>
             </thead>
             <tbody id="tBody">
