--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -218,7 +218,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/users/listHourReadings" class="nav-link">
+                                <a href="/users/listHourReadings?date=&name=&clientID=&erp_type=evn&erp_type=cez&erp_type=energoPRO"
+                                    class="nav-link">
                                     <i class="fas fa-clock"></i>
                                     <p>По часови</p>
                                 </a>
@@ -235,7 +236,8 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a href="/users/invoicing" class="nav-link">
+                                <a href="/users/invoicing?fromDate=&toDate=&erp_type=evn&erp_type=cez&erp_type=energoPRO&clientNames=&clientID="
+                                    class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>СТП</p>
                                 </a>
