--- a/views/hour-readings/listHourReadingsTable.ejs
+++ b/views/hour-readings/listHourReadingsTable.ejs
@@ -21,6 +21,7 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../js/datatables/datatables.min.css">
     <script src="../../../js/datatables/datatables.js"></script>
+    <link rel="stylesheet" href="../../css/checkboxes.css">
     <title>Document</title>
 </head>
 
@@ -29,29 +30,36 @@
 
     <form action="" method="GET">
         <div class="row justify-content-center">
-            <div class="col-md-4"> Дата <input id="date" name="date" class="ml-2" type="date" type="search"></input>
+            <div class="col-md-4"> <span class="text-heading"> Дата </span><input id="date" name="date" class="ml-2"
+                    type="date" type="search"></input>
             </div>
-            <div class="col-md-4">Име на клиент <input id="nameOfClient" list="names" name="name" class="ml-2"
-                    type="search"></input>
+            <div class="col-md-4"><span class="text-heading">Име на клиент</span> <input id="nameOfClient" list="names"
+                    name="name" class="ml-2" type="search"></input>
                 <datalist id="names">
                 </datalist>
             </div>
         </div>
         <div class="row my-3 justify-content-center">
-            <div class="col-md-5"> Идентификационен код <input id="clientID" name="clientID" class="ml-2" list="idList"
-                    type="search"></input>
+            <div class="col-md-5"><span class="text-heading"> Идентификационен код </span><input id="clientID"
+                    name="clientID" class="ml-2" list="idList" type="search"></input>
                 <datalist id="idList">
                 </datalist>
             </div>
-            <div class="col-md-3">
-                ЕРП
-                <select name="erp" id="erp">
-                    <option value="CEZ">ЧЕЗ</option>
-                    <option value="EnergoPRO">ЕнергоПРО</option>
-                    <option value="EVN">ИВН</option>
-                </select>
-            </div>
-            <div class="col-md-3"><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button></div>
+            <span class="mt-3 text-heading">Вид ЕРП:</span>
+            <label class="checkbox">
+                <input type="checkbox" name="erp_type" value="evn" checked>
+                <span>ИВН</span>
+            </label>
+            <label class="checkbox">
+                <input type="checkbox" name="erp_type" value="cez" checked>
+                <span>ЧЕЗ</span>
+            </label>
+            <label class="checkbox">
+                <input type="checkbox" name="erp_type" value="energoPRO" checked>
+                <span>ЕнергоПРО</span>
+            </label>
+            <div class="col-md-1"></div><button type="submit" class="btn-primary btn-lg ml-3">Търсене</button>
+        </div>
         </div>
     </form>
     <div class="container clients text-center mb-5">
