--- a/views/hour-readings/listHourReadingsTable.ejs
+++ b/views/hour-readings/listHourReadingsTable.ejs
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-4"><span class="text-heading">Име на клиент</span> <input id="nameOfClient" list="names"
                     name="name" class="ml-2" type="search"></input>
-                <datalist id="names">
+                <datalist id="hour-readings-clients">
                 </datalist>
             </div>
         </div>
