--- a/views/readings-menu/list-readings-stp.ejs
+++ b/views/readings-menu/list-readings-stp.ejs
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../../../../css/clients-info.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1 class="text-center">Мерения по часове за id:</h1>
     <label class="switch">
@@ -37,15 +38,15 @@
         <span class="switch-handle"></span>
     </label>
     <div class="row calendar-daily">
-        <div id="calendar" class="col-md-10">
+        <div id="calendar">
         </div>
-        <div id="legend" class="col-md-2">
+        <!-- <div id="legend" class="col-md-2">
             <h2 class="text-center mb-3"><i class="fas fa-tags"></i>Легенда</h2>
             <ul>
                 <li class="text-primary mb-3">Синъо: Настоящи мерения</li>
                 <li class="text-danger">Червено: Нови мерения</li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <div class="row chart-daily">
         <label class="switch ml-3">
@@ -53,7 +54,7 @@
             <span class="switch-label" data-on="Линия" data-off="Бар"></span>
             <span class="switch-handle"></span>
         </label>
-        <canvas id="daily-hour-readings-chart" class="mb-5" width="400" height="400"></canvas>
+        <canvas id="daily-hour-readings-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
     <script src="../../../../js/readings-menu/list-readings-stp.js">
     </script>
