--- a/views/STP listings/readingDetails.ejs
+++ b/views/STP listings/readingDetails.ejs
@@ -11,99 +11,104 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
     <link rel="stylesheet" type="text/css" href="/css/readingDetails.css">
-    
+
     <title>Детайли на мерене</title>
 </head>
 
 <body>
     <header>
         <div>
-            <h1 class="text-center mb-4">Детайли на измерване</h1>
-            </div>
+
+        </div>
 
     </header>
     <main>
-        <div class="mt-2">
-            <div class="row">
-                <label class="col-md-4">ID на измерване</label>
-                <input type="text" class="col-md-8" disabled>
+        <div class="card card-default">
+            <div class="card-header">
+                <h1 class="text-center mb-4">Детайли на измерване</h1>
             </div>
-            <div class="row">
-                <label class="col-md-4">ID на клиент</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Отчетен период от</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Отчетен период до</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4" class="text-center">Брой дни</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Номер скала</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Тип скала</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Часова зона</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Показания ново</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
+            <div class="mt-2">
+                <div class="row">
+                    <label class="col-md-4">ID на измерване</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">ID на клиент</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Отчетен период от</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Отчетен период до</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4" class="text-center">Брой дни</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Номер скала</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Тип скала</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Часова зона</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Показания ново</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
 
-            <div class="row">
-                <label class="col-md-4">Показания старо</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Разлика</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Корекция</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Приспаднати кВтч</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Общо количество кВтч</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Тарифа / Услуга</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Количество (кВтч/кВАрч)</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Единична цена</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Стойност, лв.</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Тип</label>
-                <input type="text" class="col-md-8" disabled>
-            </div>
-            <div class="row">
-                <label class="col-md-4">Оператор</label>
-                <input type="text" class="col-md-8" disabled>
+                <div class="row">
+                    <label class="col-md-4">Показания старо</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Разлика</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Корекция</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Приспаднати кВтч</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Общо количество кВтч</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Тарифа / Услуга</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Количество (кВтч/кВАрч)</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Единична цена</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Стойност, лв.</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Тип</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
+                <div class="row">
+                    <label class="col-md-4">Оператор</label>
+                    <input type="text" class="col-md-7" disabled>
+                </div>
             </div>
         </div>
     </main>
