--- a/public/css/readingDetails.css
+++ b/public/css/readingDetails.css
@@ -1,28 +1,31 @@
-body > header > div > input[type=text]:nth-child(2){
-    margin-top:7%;
+body>header>div>input[type=text]:nth-child(2) {
+    margin-top: 7%;
 }
 
 input {
-    width:100%;
+    width: 100%;
     background: none;
-    border: 1px solid rgb(97, 80, 80);
+    border: 0.1em solid rgb(97, 80, 80);
     border-radius: 3px;
     padding: 6px 20px;
     box-sizing: border-box;
     margin-bottom: 20px;
     font-size: 19px;
-    color:grey;
-    background-color:lightgrey;
+    color: black;
+    background-color: white;
     text-align: center;
-    
 }
 
-.container{
-padding-top:2%;
+.container {
+    padding-top: 2%;
 }
 
-input:hover{
-    cursor:pointer;
-    background-color:grey;
-    color:white;
-    }
+input:hover {
+    cursor: pointer;
+    background-color: white;
+    border: 0.1em solid #9c1de7;
+}
+
+label {
+    padding-left: 10% !important
+}
